--- a/resources/assets/styles/layouts/_resources.scss
+++ b/resources/assets/styles/layouts/_resources.scss
@@ -41,3 +41,8 @@
     color: inherit;
   }
 }
+
+.sort-wrapper,
+.filter-wrapper {
+  padding-bottom: 0;
+}
